drivers/card/K2616_Dll.h

int __stdcall K2616_15693LockDSFID(HANDLE ComHandle,bool bUid,BYTE Uid[8]);
int __stdcall K2616_GetIdCardNo(HANDLE ComHandle, char Id[10]);
  


//+++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_IcCardPowerOn(HANDLE ComHandle);
int __stdcall K2616_IcCardPowerOff(HANDLE ComHandle);
//+++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_CpuCardColdReset(HANDLE ComHandle, BYTE *_CPUType,BYTE _RstData[], BYTE *_RstdataLen);
int __stdcall K2616_CpuCardPowerOff(HANDLE ComHandle);
int __stdcall K2616_CpuCardWarmReset(HANDLE ComHandle, BYTE _VOLTAGE,BYTE *_CPUType, BYTE _RstData[], BYTE *_RstdataLen);
int __stdcall K2616_CPUT0APDU(HANDLE ComHandle, int _dataLen, BYTE _APDUData[], BYTE _exData[], int *_exdataLen);
int __stdcall K2616_CPUT1APDU(HANDLE ComHandle, int _dataLen, BYTE _APDUData[], BYTE _exData[], int *_exdataLen);
int __stdcall K2616_ReadInfoPOP(HANDLE ComHandle, BYTE _exData[], int *_exdataLen);
//+++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_SimColdReset(HANDLE ComHandle, BYTE *_SIMTYPE,BYTE _exData[], int *_exdataLen);
int __stdcall K2616_SimCardPowerOff(HANDLE ComHandle);
int __stdcall K2616_SimT0APDU(HANDLE ComHandle,  int _dataLen, BYTE _APDUData[], BYTE _exData[], int *_exdataLen);
int __stdcall K2616_SimT1APDU(HANDLE ComHandle,  int _dataLen, BYTE _APDUData[], BYTE _exData[], int *_exdataLen);
int __stdcall K2616_SimSelect(HANDLE ComHandle, BYTE SIMNo);
int __stdcall K2616_SimWarmReset(HANDLE ComHandle,BYTE _VOLTAGE, BYTE *_SIMTYPE,BYTE _exData[], int *_exdataLen);
//+++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_AT24CXXRead(HANDLE ComHandle, BYTE _CardType, int _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_AT24CXXWrite(HANDLE ComHandle, BYTE _CardType, int _Address, BYTE _dataLen, BYTE _BlockData[]);
//+++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_AT45DB041Reset(HANDLE ComHandle);