apsp-client-sdk/src/test/java/com/zmcsoft/apsp/client/K2616_DllLibrary.java

	/**
	 * Original signature : <code>int K2616_15693LockDSFID(HANDLE, bool, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:109</i>
	 */
	int K2616_15693LockDSFID(HANDLE ComHandle, byte bUid, ByteBuffer Uid);
	/**
	 * Original signature : <code>int K2616_GetIdCardNo(HANDLE, char[10])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:111</i><br>
	 * @deprecated use the safer methods {@link #K2616_GetIdCardNo(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_GetIdCardNo(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_GetIdCardNo(HANDLE ComHandle, Pointer Id);
	/**
	 * Original signature : <code>int K2616_GetIdCardNo(HANDLE, char[10])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:111</i>
	 */
	int K2616_GetIdCardNo(HANDLE ComHandle, ByteBuffer Id);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_IcCardPowerOn(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:115</i>
	 */
	int K2616_IcCardPowerOn(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_IcCardPowerOff(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:116</i>
	 */
	int K2616_IcCardPowerOff(HANDLE ComHandle);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_CpuCardColdReset(HANDLE, BYTE*, BYTE[], BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:118</i><br>
	 * @deprecated use the safer methods {@link #K2616_CpuCardColdReset(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer, ByteBuffer, ByteBuffer)} and {@link #K2616_CpuCardColdReset(k2616_dll.K2616_DllLibrary.HANDLE, Pointer, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_CpuCardColdReset(HANDLE ComHandle, Pointer _CPUType, Pointer _RstData, Pointer _RstdataLen);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_CpuCardColdReset(HANDLE, BYTE*, BYTE[], BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:118</i>
	 */
	int K2616_CpuCardColdReset(HANDLE ComHandle, ByteBuffer _CPUType, ByteBuffer _RstData, ByteBuffer _RstdataLen);
	/**
	 * Original signature : <code>int K2616_CpuCardPowerOff(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:119</i>
	 */
	int K2616_CpuCardPowerOff(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_CpuCardWarmReset(HANDLE, BYTE, BYTE*, BYTE[], BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:120</i><br>
	 * @deprecated use the safer methods {@link #K2616_CpuCardWarmReset(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer, ByteBuffer, ByteBuffer)} and {@link #K2616_CpuCardWarmReset(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_CpuCardWarmReset(HANDLE ComHandle, byte _VOLTAGE, Pointer _CPUType, Pointer _RstData, Pointer _RstdataLen);
	/**
	 * Original signature : <code>int K2616_CpuCardWarmReset(HANDLE, BYTE, BYTE*, BYTE[], BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:120</i>
	 */
	int K2616_CpuCardWarmReset(HANDLE ComHandle, byte _VOLTAGE, ByteBuffer _CPUType, ByteBuffer _RstData, ByteBuffer _RstdataLen);
	/**
	 * Original signature : <code>int K2616_CPUT0APDU(HANDLE, int, BYTE[], BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:121</i><br>
	 * @deprecated use the safer methods {@link #K2616_CPUT0APDU(k2616_dll.K2616_DllLibrary.HANDLE, int, ByteBuffer, ByteBuffer, IntBuffer)} and {@link #K2616_CPUT0APDU(k2616_dll.K2616_DllLibrary.HANDLE, int, Pointer, Pointer, IntByReference)} instead
	 */
	@Deprecated 
	int K2616_CPUT0APDU(HANDLE ComHandle, int _dataLen, Pointer _APDUData, Pointer _exData, IntByReference _exdataLen);
	/**
	 * Original signature : <code>int K2616_CPUT0APDU(HANDLE, int, BYTE[], BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:121</i>
	 */
	int K2616_CPUT0APDU(HANDLE ComHandle, int _dataLen, ByteBuffer _APDUData, ByteBuffer _exData, IntBuffer _exdataLen);
	/**
	 * Original signature : <code>int K2616_CPUT1APDU(HANDLE, int, BYTE[], BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:122</i><br>
	 * @deprecated use the safer methods {@link #K2616_CPUT1APDU(k2616_dll.K2616_DllLibrary.HANDLE, int, ByteBuffer, ByteBuffer, IntBuffer)} and {@link #K2616_CPUT1APDU(k2616_dll.K2616_DllLibrary.HANDLE, int, Pointer, Pointer, IntByReference)} instead
	 */
	@Deprecated 
	int K2616_CPUT1APDU(HANDLE ComHandle, int _dataLen, Pointer _APDUData, Pointer _exData, IntByReference _exdataLen);
	/**
	 * Original signature : <code>int K2616_CPUT1APDU(HANDLE, int, BYTE[], BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:122</i>
	 */
	int K2616_CPUT1APDU(HANDLE ComHandle, int _dataLen, ByteBuffer _APDUData, ByteBuffer _exData, IntBuffer _exdataLen);
	/**
	 * Original signature : <code>int K2616_ReadInfoPOP(HANDLE, BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:123</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadInfoPOP(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer, IntBuffer)} and {@link #K2616_ReadInfoPOP(k2616_dll.K2616_DllLibrary.HANDLE, Pointer, IntByReference)} instead
	 */
	@Deprecated 
	int K2616_ReadInfoPOP(HANDLE ComHandle, Pointer _exData, IntByReference _exdataLen);
	/**
	 * Original signature : <code>int K2616_ReadInfoPOP(HANDLE, BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:123</i>
	 */
	int K2616_ReadInfoPOP(HANDLE ComHandle, ByteBuffer _exData, IntBuffer _exdataLen);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_SimColdReset(HANDLE, BYTE*, BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:125</i><br>
	 * @deprecated use the safer methods {@link #K2616_SimColdReset(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer, ByteBuffer, IntBuffer)} and {@link #K2616_SimColdReset(k2616_dll.K2616_DllLibrary.HANDLE, Pointer, Pointer, IntByReference)} instead
	 */
	@Deprecated 
	int K2616_SimColdReset(HANDLE ComHandle, Pointer _SIMTYPE, Pointer _exData, IntByReference _exdataLen);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_SimColdReset(HANDLE, BYTE*, BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:125</i>
	 */
	int K2616_SimColdReset(HANDLE ComHandle, ByteBuffer _SIMTYPE, ByteBuffer _exData, IntBuffer _exdataLen);
	/**
	 * Original signature : <code>int K2616_SimCardPowerOff(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:126</i>
	 */
	int K2616_SimCardPowerOff(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_SimT0APDU(HANDLE, int, BYTE[], BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:127</i><br>
	 * @deprecated use the safer methods {@link #K2616_SimT0APDU(k2616_dll.K2616_DllLibrary.HANDLE, int, ByteBuffer, ByteBuffer, IntBuffer)} and {@link #K2616_SimT0APDU(k2616_dll.K2616_DllLibrary.HANDLE, int, Pointer, Pointer, IntByReference)} instead
	 */
	@Deprecated 
	int K2616_SimT0APDU(HANDLE ComHandle, int _dataLen, Pointer _APDUData, Pointer _exData, IntByReference _exdataLen);
	/**
	 * Original signature : <code>int K2616_SimT0APDU(HANDLE, int, BYTE[], BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:127</i>
	 */
	int K2616_SimT0APDU(HANDLE ComHandle, int _dataLen, ByteBuffer _APDUData, ByteBuffer _exData, IntBuffer _exdataLen);
	/**
	 * Original signature : <code>int K2616_SimT1APDU(HANDLE, int, BYTE[], BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:128</i><br>
	 * @deprecated use the safer methods {@link #K2616_SimT1APDU(k2616_dll.K2616_DllLibrary.HANDLE, int, ByteBuffer, ByteBuffer, IntBuffer)} and {@link #K2616_SimT1APDU(k2616_dll.K2616_DllLibrary.HANDLE, int, Pointer, Pointer, IntByReference)} instead
	 */
	@Deprecated 
	int K2616_SimT1APDU(HANDLE ComHandle, int _dataLen, Pointer _APDUData, Pointer _exData, IntByReference _exdataLen);
	/**
	 * Original signature : <code>int K2616_SimT1APDU(HANDLE, int, BYTE[], BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:128</i>
	 */
	int K2616_SimT1APDU(HANDLE ComHandle, int _dataLen, ByteBuffer _APDUData, ByteBuffer _exData, IntBuffer _exdataLen);
	/**
	 * Original signature : <code>int K2616_SimSelect(HANDLE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:129</i>
	 */
	int K2616_SimSelect(HANDLE ComHandle, byte SIMNo);
	/**
	 * Original signature : <code>int K2616_SimWarmReset(HANDLE, BYTE, BYTE*, BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:130</i><br>
	 * @deprecated use the safer methods {@link #K2616_SimWarmReset(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer, ByteBuffer, IntBuffer)} and {@link #K2616_SimWarmReset(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer, Pointer, IntByReference)} instead
	 */
	@Deprecated 
	int K2616_SimWarmReset(HANDLE ComHandle, byte _VOLTAGE, Pointer _SIMTYPE, Pointer _exData, IntByReference _exdataLen);
	/**
	 * Original signature : <code>int K2616_SimWarmReset(HANDLE, BYTE, BYTE*, BYTE[], int*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:130</i>
	 */
	int K2616_SimWarmReset(HANDLE ComHandle, byte _VOLTAGE, ByteBuffer _SIMTYPE, ByteBuffer _exData, IntBuffer _exdataLen);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_AT24CXXRead(HANDLE, BYTE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:132</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT24CXXRead(k2616_dll.K2616_DllLibrary.HANDLE, byte, int, byte, ByteBuffer)} and {@link #K2616_AT24CXXRead(k2616_dll.K2616_DllLibrary.HANDLE, byte, int, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT24CXXRead(HANDLE ComHandle, byte _CardType, int _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_AT24CXXRead(HANDLE, BYTE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:132</i>
	 */
	int K2616_AT24CXXRead(HANDLE ComHandle, byte _CardType, int _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT24CXXWrite(HANDLE, BYTE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:133</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT24CXXWrite(k2616_dll.K2616_DllLibrary.HANDLE, byte, int, byte, ByteBuffer)} and {@link #K2616_AT24CXXWrite(k2616_dll.K2616_DllLibrary.HANDLE, byte, int, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT24CXXWrite(HANDLE ComHandle, byte _CardType, int _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT24CXXWrite(HANDLE, BYTE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:133</i>
	 */
	int K2616_AT24CXXWrite(HANDLE ComHandle, byte _CardType, int _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_AT45DB041Reset(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:135</i>
	 */
	int K2616_AT45DB041Reset(HANDLE ComHandle);
